--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p id="logo">Papas Para Todos</p>
           </div>
             <nav class="col-12 col-sm-10 col-lg-9">
-              <ul class="paginas">
+              <ul class="col-12 paginas">
                   <li><a href="index.html">inicio</a></li>
                   <li><a href="pages.html/nosotros.html">nosotros</a></li>
                   <li><a href="pages.html/productos.html">productos</a></li>
@@ -56,35 +56,51 @@
         <div class="row">
             <h2 class="col-12">Productos destacados</h2>
               <div class="col-12 col-sm-6 col-lg-3">
-                <img src="./img/Papines.jpg" alt="papines" class="papas1">
-                <p class="nombre">Papines</p>
+                <div class="papas11">
+                  <img src="./img/Papines.jpg" alt="papines" class="papas1">
+                </div>
+               <p class="nombre">Papines</p>
               </div>
               <div class="col-12 col-sm-6 col-lg-3">
-                <img src="./img/papines 2.jpg" alt="papines 2" class="papas2">
+                <div class="papas11">
+                  <img src="./img/papines 2.jpg" alt="papines 2" class="papas2">
+                </div>               
                 <p class="nombre">Papas noissette</p>
               </div>
               <div class="col-12 col-sm-6 col-lg-3">
-                <img src="./img/papines 3.jpg" alt="papines 3" class="papas3">
+                <div class="papas11">
+                  <img src="./img/papines 3.jpg" alt="papines 3" class="papas3">
+                </div>                
                 <p class="nombre">Mini papa</p>
               </div>
               <div class="col-12 col-sm-6 col-lg-3">
-                <img src="./img/papines 4.jpg" alt="papines 4" class="papas4">
-                <p class="nombre">Papa consumo</p>
+                <div class="papas11">
+                  <img src="./img/papines 4.jpg" alt="papines 4" class="papas4">
+                </div>
+               <p class="nombre">Papa consumo</p>
               </div>
                 <div class="col-12 col-sm-6 col-lg-3">
-                  <img src="./img/Papines.jpg" alt="papines" class="papas1">
+                  <div class="papas11">
+                    <img src="./img/Papines.jpg" alt="papines" class="papas1">
+                  </div>                
                   <p class="nombre">Papines</p>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-3">
-                  <img src="./img/papines 2.jpg" alt="papines 2" class="papas2">
+                  <div class="papas11">
+                    <img src="./img/papines 2.jpg" alt="papines 2" class="papas2">
+                  </div>                 
                   <p class="nombre">Papas noissette</p>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-3">
-                  <img src="./img/papines 3.jpg" alt="papines 3" class="papas3">
+                  <div class="papas11">
+                    <img src="./img/papines 3.jpg" alt="papines 3" class="papas3">
+                  </div>                 
                   <p class="nombre">Mini papa</p>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-3">
-                  <img src="./img/papines 4.jpg" alt="papines 4" class="papas4">
+                  <div class="papas11">
+                    <img src="./img/papines 4.jpg" alt="papines 4" class="papas4">
+                  </div>                  
                   <p class="nombre">Papa consumo</p>
                 </div>
            </div>        
