--- a/pages.html/contacto.html
+++ b/pages.html/contacto.html
@@ -13,31 +13,31 @@
     <title>Contacto</title>
 </head>
 <body>
-    <header>
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-1">
-              <a href="../index.html"><img src="../img/logo papas.png" alt="imagen logo"></a>
-            </div>
-            <div class="col-2">
-              <p id="logo">Papas Para Todos</p>
-            </div>
-              <nav class="col-9">
-                <ul class="paginas">
-                    <li><a href="../index.html">inicio</a></li>
-                    <li><a href="nosotros.html">nosotros</a></li>
-                    <li><a href="productos.html">productos</a></li>
-                    <li><a href="tienda.html">tienda</a></li>
-                    <li><a href="contacto.html">contacto</a></li>
-                </ul>
-              </nav>
-          </div>        
-        </div>        
-      </header>
+  <header>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-12 col-sm-10 col-lg-1">
+          <a href="../index.html"><img src="../img/logo papas.png" alt="imagen logo"></a>
+        </div>
+        <div class="col-12 col-sm-10 col-lg-2 ">
+          <p id="logo">Papas Para Todos</p>
+        </div>
+          <nav class="col-12 col-sm-10 col-lg-9">
+            <ul class="col-12 paginas">
+                <li><a href="../index.html">inicio</a></li>
+                <li><a href="nosotros.html">nosotros</a></li>
+                <li><a href="productos.html">productos</a></li>
+                <li><a href="tienda.html">tienda</a></li>
+                <li><a href="contacto.html">contacto</a></li>
+            </ul>
+          </nav>
+      </div>        
+    </div>        
+  </header>
     <main>
         <div class="container-fluid">
             <div class="row">
-                <h1 class="col-12 formu">Completa nuestro formulario</h1>
+                <h2 class="col-12 formu">Completa nuestro formulario</h2>
                 <div class="col-11">
                     <form action="" class="formulario">
                         <div class="col-6">
@@ -61,11 +61,11 @@
                         </div>
                     </form>        
                 </div>
-                <div class="redes col-1">
-                <a href="contacto.html"><img src="../img/logo facebook.png" alt="facebook" class="redes"></a>
-                <a href="contacto.html"><img src="../img/logo instagram.jpeg" alt="instagram" class="redes"></a>
-                <a href="contacto.html"><img src="../img/logo twitter.png" alt="twitter" class="redes"></a>
-                <a href="contacto.html"><img src="../img/logo correo.png" alt="correo" class="redes"></a>
+                <div class="redes10 col-12 col-lg-1">
+                <a href="contacto.html"><img src="../img/logo facebook.png" alt="facebook" class="redes">Facebook</a>
+                <a href="contacto.html"><img src="../img/logo instagram.jpeg" alt="instagram" class="redes">Instagram</a>
+                <a href="contacto.html"><img src="../img/logo twitter.png" alt="twitter" class="redes">Twitter</a>
+                <a href="contacto.html"><img src="../img/logo correo.png" alt="correo" class="redes">Correo</a>
                 </div>
             </div>
         </div>
@@ -78,14 +78,14 @@
         </div>          
     </main>
     <footer>
-        <div  class="container-fluid">
-            <div class="row">
-              <b class="col-3 referencia">San Martin 0000</b>
-              <b class="col-3 referencia">Telefono: 0800-0101-010101</b>
-              <b class="col-3 referencia">Mail: ppt23@outlook.com</b> 
-              <b class="col-3 copy" >Todos los derechos reservados </b> 
-            </div>        
-          </div>       
-   </footer>
+      <div  class="container-fluid">
+         <div class="row">
+           <b class="col-12 col-sm-10 col-lg-3 referencia">San Martin 0000</b>
+           <b class="col-12 col-sm-10 col-lg-3 referencia">Telefono: 0800-0101-010101</b>
+           <b class="col-12 col-sm-10 col-lg-3 referencia">Mail: ppt23@outlook.com</b> 
+           <b class="col-12 col-sm-10 col-lg-3 copy" >Todos los derechos reservados </b> 
+         </div>        
+       </div>               
+     </footer>
  </body>
 </html>
