--- a/pages.html/nosotros.html
+++ b/pages.html/nosotros.html
@@ -13,32 +13,34 @@
     <title>Nosotros</title>
 </head>
 <body>
-    <header>
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-1">
-              <a href="../index.html"><img src="../img/logo papas.png" alt="imagen logo"></a>
-            </div>
-            <div class="col-2">
-              <p id="logo">Papas Para Todos</p>
-            </div>
-              <nav class="col-9">
-                <ul class="paginas">
-                    <li><a href="../index.html">inicio</a></li>
-                    <li><a href="nosotros.html">nosotros</a></li>
-                    <li><a href="productos.html">productos</a></li>
-                    <li><a href="tienda.html">tienda</a></li>
-                    <li><a href="contacto.html">contacto</a></li>
-                </ul>
-              </nav>
-          </div>        
-        </div>        
-      </header>
+  <header>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-12 col-sm-10 col-lg-1">
+          <a href="../index.html"><img src="../img/logo papas.png" alt="imagen logo"></a>
+        </div>
+        <div class="col-12 col-sm-10 col-lg-2 ">
+          <p id="logo">Papas Para Todos</p>
+        </div>
+          <nav class="col-12 col-sm-10 col-lg-9">
+            <ul class="col-12 paginas">
+                <li><a href="../index.html">inicio</a></li>
+                <li><a href="nosotros.html">nosotros</a></li>
+                <li><a href="productos.html">productos</a></li>
+                <li><a href="tienda.html">tienda</a></li>
+                <li><a href="contacto.html">contacto</a></li>
+            </ul>
+          </nav>
+      </div>        
+    </div>        
+  </header>
     <main>
         <div class="container-fluid">
                 <section class="row historia1">
-                    <h2 class="col-12">Nuestra historia</h2>
-                    <article class="col-6" >
+                  <div class="historia">
+                    <h2 class=" col-12">Nuestra historia</h2>
+                  </div>                   
+                    <article class="col-12 col-lg-6" >
                        <p class="historia"> Papas para todos somos una empresa con mas de 25 años en el rubro.
                                 Producimos y comercializamos papas consumo, mini papas, papines y papas noissette
                                 con alcance a toda la Argentina con la mision de llegar con un producto de altisima calidad 
@@ -49,7 +51,7 @@
                                 producto hasta su consumidor final.
                             </p>
                     </article>
-                    <div class="col-6 imghistoria">
+                    <div class="col-12 col-lg-6 imghistoria">
                         <img src="../img/papas 7.jpeg" alt="cosecha papa" class="papaAcampo">
                     </div>
                 </section>
@@ -58,20 +60,20 @@
         
         <div>
             <p class="cosecha col-12">Mira nuestro metodo de cosecha a campo</p>
-            <iframe class="col-3" width="500" height="315" src="https://www.youtube.com/embed/WvFIbqB1A0I"
+            <iframe class="col-12 col-lg-3" width="500" height="315" src="https://www.youtube.com/embed/WvFIbqB1A0I"
             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
             encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
     </main>
     <footer>
-        <div  class="container-fluid">
-            <div class="row">
-              <b class="col-3 referencia">San Martin 0000</b>
-              <b class="col-3 referencia">Telefono: 0800-0101-010101</b>
-              <b class="col-3 referencia">Mail: ppt23@outlook.com</b> 
-              <b class="col-3 copy" >Todos los derechos reservados </b> 
-            </div>        
-         </div>       
-   </footer>
+      <div  class="container-fluid">
+         <div class="row">
+           <b class="col-12 col-sm-10 col-lg-3 referencia">San Martin 0000</b>
+           <b class="col-12 col-sm-10 col-lg-3 referencia">Telefono: 0800-0101-010101</b>
+           <b class="col-12 col-sm-10 col-lg-3 referencia">Mail: ppt23@outlook.com</b> 
+           <b class="col-12 col-sm-10 col-lg-3 copy" >Todos los derechos reservados </b> 
+         </div>        
+       </div>               
+     </footer>
 </body>
 </html>
