--- a/pages.html/productos.html
+++ b/pages.html/productos.html
@@ -16,14 +16,14 @@
     <header>
         <div class="container-fluid">
           <div class="row">
-            <div class="col-1">
+            <div class="col-12 col-sm-10 col-lg-1">
               <a href="../index.html"><img src="../img/logo papas.png" alt="imagen logo"></a>
             </div>
-            <div class="col-2">
+            <div class="col-12 col-sm-10 col-lg-2 ">
               <p id="logo">Papas Para Todos</p>
             </div>
-              <nav class="col-9">
-                <ul class="paginas">
+              <nav class="col-12 col-sm-10 col-lg-9">
+                <ul class="col-12 paginas">
                     <li><a href="../index.html">inicio</a></li>
                     <li><a href="nosotros.html">nosotros</a></li>
                     <li><a href="productos.html">productos</a></li>
@@ -38,40 +38,40 @@
         <div class="container">
             <H2 class="col-12">Nuestros productos</H2>
                 <div class="row">
-                    <div class="col-3">
+                    <div class="col-12 col-lg 3 imgT">
                          <img src="../img/papines 2.jpg" alt="papines" class="imgProducto">
                     </div>
-                    <div class="col-3">
+                    <div class="col-12 col-lg-3 imgT">
                          <img src="../img/papines 5.jpg" alt="papines" class="imgProducto">
                     </div>
-                    <div class="col-3">
+                    <div class="col-12 col-lg-3 imgT">
                         <img src="../img/papines 5.jpg" alt="papines" class="imgProducto">
                     </div>
-                    <div class="col-3">
+                    <div class="col-12 col-lg-3 imgT">
                         <img src="../img/papines 4.jpg" alt="papines" class="imgProducto">
                     </div>
-                    <div class="col-3">
+                    <div class="col-12 col-lg-3 imgT">
                         <img src="../img/Papines.jpg" alt="papines" class="imgProducto">
                     </div>
-                    <div class="col-3">
+                    <div class="col-12 col-lg-3 imgT">
                         <img src="../img/papines 3.jpg" alt="papines" class="imgProducto">
                     </div>
-                    <div class="col-3">
+                    <div class="col-12 col-lg-3 imgT">
                         <img src="../img/papines 2.jpg" alt="papines" class="imgProducto">
                     </div>
-                    <div class="col-3">
+                    <div class="col-12 col-lg-3 imgT">
                         <img src="../img/papines 5.jpg" alt="papines" class="imgProducto">
                     </div>
-                    <div class="col-3">
+                    <div class="col-12 col-lg-3 imgT">
                         <img src="../img/papines 4.jpg" alt="papines" class="imgProducto">
                     </div>
-                    <div class="col-3">
+                    <div class="col-12 col-lg-3 imgT">
                         <img src="../img/Papines.jpg" alt="papines" class="imgProducto">
                     </div>
-                    <div class="col-3">
+                    <div class="col-12 col-lg-3 imgT">
                         <img src="../img/papines 3.jpg" alt="papines" class="imgProducto">
                     </div>
-                    <div class="col-3">
+                    <div class="col-12 col-lg-3 imgT">
                          <img src="../img/papines 3.jpg" alt="papines" class="imgProducto">
                     </div>
                 </div>
@@ -82,15 +82,15 @@
                 </div>
             </div>
      </main>
-   <footer>
+     <footer>
         <div  class="container-fluid">
-            <div class="row">
-              <b class="col-3 referencia">San Martin 0000</b>
-              <b class="col-3 referencia">Telefono: 0800-0101-010101</b>
-              <b class="col-3 referencia">Mail: ppt23@outlook.com</b> 
-              <b class="col-3 copy" >Todos los derechos reservados </b> 
-            </div>        
-          </div>        
-   </footer>
+           <div class="row">
+             <b class="col-12 col-sm-10 col-lg-3 referencia">San Martin 0000</b>
+             <b class="col-12 col-sm-10 col-lg-3 referencia">Telefono: 0800-0101-010101</b>
+             <b class="col-12 col-sm-10 col-lg-3 referencia">Mail: ppt23@outlook.com</b> 
+             <b class="col-12 col-sm-10 col-lg-3 copy" >Todos los derechos reservados </b> 
+           </div>        
+         </div>               
+       </footer>
  </body>
 </html>
