--- a/pages.html/tienda.html
+++ b/pages.html/tienda.html
@@ -15,24 +15,24 @@
 <body>
    <header>
       <div class="container-fluid">
-         <div class="row">
-           <div class="col-12 col-sm-10 col-lg-1">
-             <a href="../index.html"><img src="../img/logo papas.png" alt="imagen logo"></a>
-           </div>
-           <div class="col-12 col-sm-10 col-lg-2 ">
-             <p id="logo">Papas Para Todos</p>
-           </div>
-           <nav class="col-12 col-sm-10 col-lg-9">
-               <ul class="paginas">
-                   <li><a href="../index.html">inicio</a></li>
-                   <li><a href="nosotros.html">nosotros</a></li>
-                   <li><a href="productos.html">productos</a></li>
-                   <li><a href="tienda.html">tienda</a></li>
-                   <li><a href="contacto.html">contacto</a></li>
-               </ul>
-           </nav>
-         </div>        
-       </div>        
+        <div class="row">
+          <div class="col-12 col-sm-10 col-lg-1">
+            <a href="../index.html"><img src="../img/logo papas.png" alt="imagen logo"></a>
+          </div>
+          <div class="col-12 col-sm-10 col-lg-2 ">
+            <p id="logo">Papas Para Todos</p>
+          </div>
+            <nav class="col-12 col-sm-10 col-lg-9">
+              <ul class="col-12 paginas">
+                  <li><a href="../index.html">inicio</a></li>
+                  <li><a href="nosotros.html">nosotros</a></li>
+                  <li><a href="productos.html">productos</a></li>
+                  <li><a href="tienda.html">tienda</a></li>
+                  <li><a href="contacto.html">contacto</a></li>
+              </ul>
+            </nav>
+        </div>        
+      </div>        
     </header>
     <main>
       <div class="container">
@@ -40,84 +40,108 @@
             <h2 class="col-12">Tienda online</h2>
             <h3 class="col-12">Comprar aqui</h3>
             <div class="fotoTienda col-12 col-sm-6 col-lg-3" > 
-              <img src="../img/Papines.jpg" alt="papines">
+               <div class="imgT"> 
+                  <img src="../img/Papines.jpg" alt="papines">
+               </div>            
               <div id="precio2">
                  <p class="precio">papines 0.00</p>
                <a href="tienda.html"><img id="carrito" src="../img/carrito.png" alt="comprar"></a>  
               </div>
+           </div>           
+           <div class="fotoTienda col-12 col-sm-6 col-lg-3">
+            <div class="imgT">
+               <img src="../img/Papines.jpg" alt="papines">
+            </div> 
+              <div id="precio2">
+                 <p class="precio">papines 0.00</p>
+                 <a href="tienda.html"><img id="carrito" src="../img/carrito.png" alt="comprar"></a> 
+              </div>
            </div> 
-           <div class="fotoTienda col-12 col-sm-6 col-lg-3"> 
-              <img src="../img/Papines.jpg" alt="papines">
+           <div class="fotoTienda col-12 col-sm-6 col-lg-3">
+            <div class="imgT">
+               <img src="../img/Papines.jpg" alt="papines">
+            </div>             
+              <div id="precio2">
+                 <p class="precio">papines 0.00</p>
+                 <a href="tienda.html"><img id="carrito" src="../img/carrito.png" alt="comprar"></a> 
+              </div>
+           </div> 
+           <div class="fotoTienda col-12 col-sm-6 col-lg-3">
+            <div class="imgT">
+               <img src="../img/Papines.jpg" alt="papines">
+            </div>               
+              <div id="precio2">
+                 <p class="precio">papines 0.00</p>
+                 <a href="tienda.html"><img id="carrito" src="../img/carrito.png" alt="comprar"></a> 
+              </div>
+           </div> 
+           <div class="fotoTienda col-12 col-sm-6 col-lg-3">
+            <div class="imgT">
+               <img src="../img/Papines.jpg" alt="papines">
+            </div> 
               <div id="precio2">
                  <p class="precio">papines 0.00</p>
                  <a href="tienda.html"><img id="carrito" src="../img/carrito.png" alt="comprar"></a> 
               </div>
            </div> 
            <div class="fotoTienda col-12 col-sm-6 col-lg-3"> 
-              <img src="../img/Papines.jpg" alt="papines">
+            <div class="imgT">
+               <img src="../img/Papines.jpg" alt="papines">
+            </div>            
+              <div id="precio2">
+                 <p class="precio">papines 0.00</p>
+                 <a href="tienda.html"><img id="carrito" src="../img/carrito.png" alt="comprar"></a> 
+              </div>
+           </div> 
+           <div class="fotoTienda col-12 col-sm-6 col-lg-3">
+            <div class="imgT">
+               <img src="../img/Papines.jpg" alt="papines">
+            </div>             
               <div id="precio2">
                  <p class="precio">papines 0.00</p>
                  <a href="tienda.html"><img id="carrito" src="../img/carrito.png" alt="comprar"></a> 
               </div>
            </div> 
            <div class="fotoTienda col-12 col-sm-6 col-lg-3"> 
-              <img src="../img/Papines.jpg" alt="papines">
+            <div class="imgT">
+               <img src="../img/Papines.jpg" alt="papines">
+            </div>              
               <div id="precio2">
                  <p class="precio">papines 0.00</p>
                  <a href="tienda.html"><img id="carrito" src="../img/carrito.png" alt="comprar"></a> 
               </div>
            </div> 
            <div class="fotoTienda col-12 col-sm-6 col-lg-3"> 
-              <img src="../img/Papines.jpg" alt="papines">
+            <div class="imgT">
+               <img src="../img/Papines.jpg" alt="papines">
+            </div>             
               <div id="precio2">
                  <p class="precio">papines 0.00</p>
                  <a href="tienda.html"><img id="carrito" src="../img/carrito.png" alt="comprar"></a> 
               </div>
            </div> 
            <div class="fotoTienda col-12 col-sm-6 col-lg-3"> 
-              <img src="../img/Papines.jpg" alt="papines">
+            <div class="imgT">
+               <img src="../img/Papines.jpg" alt="papines">
+            </div>             
+              <div id="precio2">
+                 <p class="precio">papines 0.00</p>
+                 <a href="tienda.html"><img id="carrito" src="../img/carrito.png" alt="comprar"></a> 
+              </div>
+           </div> 
+           <div class="fotoTienda col-12 col-sm-6 col-lg-3">
+            <div class="imgT">
+               <img src="../img/Papines.jpg" alt="papines">
+            </div>              
               <div id="precio2">
                  <p class="precio">papines 0.00</p>
                  <a href="tienda.html"><img id="carrito" src="../img/carrito.png" alt="comprar"></a> 
               </div>
            </div> 
            <div class="fotoTienda col-12 col-sm-6 col-lg-3"> 
-              <img src="../img/Papines.jpg" alt="papines">
-              <div id="precio2">
-                 <p class="precio">papines 0.00</p>
-                 <a href="tienda.html"><img id="carrito" src="../img/carrito.png" alt="comprar"></a> 
-              </div>
-           </div> 
-           <div class="fotoTienda col-12 col-sm-6 col-lg-3"> 
-              <img src="../img/Papines.jpg" alt="papines">
-              <div id="precio2">
-                 <p class="precio">papines 0.00</p>
-                 <a href="tienda.html"><img id="carrito" src="../img/carrito.png" alt="comprar"></a> 
-              </div>
-           </div> 
-           <div class="fotoTienda col-12 col-sm-6 col-lg-3"> 
-              <img src="../img/Papines.jpg" alt="papines">
-              <div id="precio2">
-                 <p class="precio">papines 0.00</p>
-                 <a href="tienda.html"><img id="carrito" src="../img/carrito.png" alt="comprar"></a> 
-              </div>
-           </div> 
-           <div class="fotoTienda col-12 col-sm-6 col-lg-3"> 
-              <img src="../img/Papines.jpg" alt="papines">
-              <div id="precio2">
-                 <p class="precio">papines 0.00</p>
-                 <a href="tienda.html"><img id="carrito" src="../img/carrito.png" alt="comprar"></a> 
-              </div>
-           </div> 
-           <div class="fotoTienda col-12 col-sm-6 col-lg-3"> 
-              <img src="../img/Papines.jpg" alt="papines">
-              <div id="precio2">
-                 <p class="precio">papines 0.00</p>
-                 <a href="tienda.html"><img id="carrito" src="../img/carrito.png" alt="comprar"></a> 
-              </div>
-           </div> 
-           <div class="fotoTienda col-12 col-sm-6 col-lg-3"> 
-              <img src="../img/Papines.jpg" alt="papines">
+            <div class="imgT">
+               <img src="../img/Papines.jpg" alt="papines">
+            </div>             
               <div id="precio2">
                  <p class="precio">papines 0.00</p>
                  <a href="tienda.html"><img id="carrito" src="../img/carrito.png" alt="comprar"></a> 
