--- a/pages.html/contacto.html
+++ b/pages.html/contacto.html
@@ -83,7 +83,7 @@
            <b class="col-12 col-sm-10 col-lg-3 referencia">San Martin 0000</b>
            <b class="col-12 col-sm-10 col-lg-3 referencia">Telefono: 0800-0101-010101</b>
            <b class="col-12 col-sm-10 col-lg-3 referencia">Mail: ppt23@outlook.com</b> 
-           <b class="col-12 col-sm-10 col-lg-3 copy" >Todos los derechos reservados </b> 
+           <b class="col-12 col-sm-10 col-lg-3 referencia" >Todos los derechos reservados </b> 
          </div>        
        </div>               
      </footer>
