--- a/pages.html/nosotros.html
+++ b/pages.html/nosotros.html
@@ -55,12 +55,10 @@
                         <img src="../img/papas 7.jpeg" alt="cosecha papa" class="papaAcampo">
                     </div>
                 </section>
-        </div>
-        
-        
+        </div>        
         <div>
             <p class="cosecha col-12">Mira nuestro metodo de cosecha a campo</p>
-            <iframe class="col-12 col-lg-3" width="500" height="315" src="https://www.youtube.com/embed/WvFIbqB1A0I"
+            <iframe class="col-12 col-lg-6" width="500" height="500" src="https://www.youtube.com/embed/WvFIbqB1A0I"
             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
             encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
@@ -71,7 +69,7 @@
            <b class="col-12 col-sm-10 col-lg-3 referencia">San Martin 0000</b>
            <b class="col-12 col-sm-10 col-lg-3 referencia">Telefono: 0800-0101-010101</b>
            <b class="col-12 col-sm-10 col-lg-3 referencia">Mail: ppt23@outlook.com</b> 
-           <b class="col-12 col-sm-10 col-lg-3 copy" >Todos los derechos reservados </b> 
+           <b class="col-12 col-sm-10 col-lg-3 referencia" >Todos los derechos reservados </b> 
          </div>        
        </div>               
      </footer>
