--- a/pages.html/productos.html
+++ b/pages.html/productos.html
@@ -38,7 +38,7 @@
         <div class="container">
             <H2 class="col-12">Nuestros productos</H2>
                 <div class="row">
-                    <div class="col-12 col-lg 3 imgT">
+                    <div class="col-12 col-lg-3 imgT">
                          <img src="../img/papines 2.jpg" alt="papines" class="imgProducto">
                     </div>
                     <div class="col-12 col-lg-3 imgT">
@@ -88,7 +88,7 @@
              <b class="col-12 col-sm-10 col-lg-3 referencia">San Martin 0000</b>
              <b class="col-12 col-sm-10 col-lg-3 referencia">Telefono: 0800-0101-010101</b>
              <b class="col-12 col-sm-10 col-lg-3 referencia">Mail: ppt23@outlook.com</b> 
-             <b class="col-12 col-sm-10 col-lg-3 copy" >Todos los derechos reservados </b> 
+             <b class="col-12 col-sm-10 col-lg-3 referencia" >Todos los derechos reservados </b> 
            </div>        
          </div>               
        </footer>
