--- a/pages.html/tienda.html
+++ b/pages.html/tienda.html
@@ -37,7 +37,10 @@
     <main>
       <div class="container">
          <div class="row">
-            <h2 class="col-12">Tienda online</h2>
+            <div class="online">
+               <h2 class="col-12">Tienda online</h2>
+            </div>
+           
             <h3 class="col-12">Comprar aqui</h3>
             <div class="fotoTienda col-12 col-sm-6 col-lg-3" > 
                <div class="imgT"> 
@@ -156,7 +159,7 @@
            <b class="col-12 col-sm-10 col-lg-3 referencia">San Martin 0000</b>
            <b class="col-12 col-sm-10 col-lg-3 referencia">Telefono: 0800-0101-010101</b>
            <b class="col-12 col-sm-10 col-lg-3 referencia">Mail: ppt23@outlook.com</b> 
-           <b class="col-12 col-sm-10 col-lg-3 copy" >Todos los derechos reservados </b> 
+           <b class="col-12 col-sm-10 col-lg-3 referencia" >Todos los derechos reservados </b> 
          </div>        
        </div>               
      </footer>
