--- a/pages.html/tienda.html
+++ b/pages.html/tienda.html
@@ -48,7 +48,7 @@
                </div>            
               <div id="precio2">
                  <p class="precio">papines 0.00</p>
-               <a href="tienda.html"><img id="carrito" src="../img/carrito.png" alt="comprar"></a>  
+               <img id="carrito" src="../img/carrito.png" alt="comprar">  
               </div>
            </div>           
            <div class="fotoTienda col-12 col-sm-6 col-lg-3">
@@ -57,7 +57,7 @@
             </div> 
               <div id="precio2">
                  <p class="precio">papines 0.00</p>
-                 <a href="tienda.html"><img id="carrito" src="../img/carrito.png" alt="comprar"></a> 
+                 <img id="carrito" src="../img/carrito.png" alt="comprar"> 
               </div>
            </div> 
            <div class="fotoTienda col-12 col-sm-6 col-lg-3">
@@ -66,7 +66,7 @@
             </div>             
               <div id="precio2">
                  <p class="precio">papines 0.00</p>
-                 <a href="tienda.html"><img id="carrito" src="../img/carrito.png" alt="comprar"></a> 
+                 <img id="carrito" src="../img/carrito.png" alt="comprar">
               </div>
            </div> 
            <div class="fotoTienda col-12 col-sm-6 col-lg-3">
@@ -75,7 +75,7 @@
             </div>               
               <div id="precio2">
                  <p class="precio">papines 0.00</p>
-                 <a href="tienda.html"><img id="carrito" src="../img/carrito.png" alt="comprar"></a> 
+                 <img id="carrito" src="../img/carrito.png" alt="comprar"> 
               </div>
            </div> 
            <div class="fotoTienda col-12 col-sm-6 col-lg-3">
@@ -84,7 +84,7 @@
             </div> 
               <div id="precio2">
                  <p class="precio">papines 0.00</p>
-                 <a href="tienda.html"><img id="carrito" src="../img/carrito.png" alt="comprar"></a> 
+                 <img id="carrito" src="../img/carrito.png" alt="comprar"> 
               </div>
            </div> 
            <div class="fotoTienda col-12 col-sm-6 col-lg-3"> 
@@ -93,7 +93,7 @@
             </div>            
               <div id="precio2">
                  <p class="precio">papines 0.00</p>
-                 <a href="tienda.html"><img id="carrito" src="../img/carrito.png" alt="comprar"></a> 
+                 <img id="carrito" src="../img/carrito.png" alt="comprar"> 
               </div>
            </div> 
            <div class="fotoTienda col-12 col-sm-6 col-lg-3">
@@ -102,7 +102,7 @@
             </div>             
               <div id="precio2">
                  <p class="precio">papines 0.00</p>
-                 <a href="tienda.html"><img id="carrito" src="../img/carrito.png" alt="comprar"></a> 
+                 <img id="carrito" src="../img/carrito.png" alt="comprar"> 
               </div>
            </div> 
            <div class="fotoTienda col-12 col-sm-6 col-lg-3"> 
@@ -111,7 +111,7 @@
             </div>              
               <div id="precio2">
                  <p class="precio">papines 0.00</p>
-                 <a href="tienda.html"><img id="carrito" src="../img/carrito.png" alt="comprar"></a> 
+                 <img id="carrito" src="../img/carrito.png" alt="comprar"> 
               </div>
            </div> 
            <div class="fotoTienda col-12 col-sm-6 col-lg-3"> 
@@ -120,7 +120,7 @@
             </div>             
               <div id="precio2">
                  <p class="precio">papines 0.00</p>
-                 <a href="tienda.html"><img id="carrito" src="../img/carrito.png" alt="comprar"></a> 
+                 <img id="carrito" src="../img/carrito.png" alt="comprar">
               </div>
            </div> 
            <div class="fotoTienda col-12 col-sm-6 col-lg-3"> 
@@ -129,7 +129,7 @@
             </div>             
               <div id="precio2">
                  <p class="precio">papines 0.00</p>
-                 <a href="tienda.html"><img id="carrito" src="../img/carrito.png" alt="comprar"></a> 
+                 <img id="carrito" src="../img/carrito.png" alt="comprar"> 
               </div>
            </div> 
            <div class="fotoTienda col-12 col-sm-6 col-lg-3">
@@ -138,7 +138,7 @@
             </div>              
               <div id="precio2">
                  <p class="precio">papines 0.00</p>
-                 <a href="tienda.html"><img id="carrito" src="../img/carrito.png" alt="comprar"></a> 
+                 <img id="carrito" src="../img/carrito.png" alt="comprar">
               </div>
            </div> 
            <div class="fotoTienda col-12 col-sm-6 col-lg-3"> 
@@ -147,7 +147,7 @@
             </div>             
               <div id="precio2">
                  <p class="precio">papines 0.00</p>
-                 <a href="tienda.html"><img id="carrito" src="../img/carrito.png" alt="comprar"></a> 
+                 <img id="carrito" src="../img/carrito.png" alt="comprar">
               </div>
            </div> 
          </div>
