--- a/pages.html/contacto.html
+++ b/pages.html/contacto.html
@@ -62,10 +62,18 @@
                     </form>        
                 </div>
                 <div class="redes10 col-12 col-lg-1">
-                <a href="contacto.html"><img src="../img/logo facebook.png" alt="facebook" class="redes">Facebook</a>
-                <a href="contacto.html"><img src="../img/logo instagram.jpeg" alt="instagram" class="redes">Instagram</a>
-                <a href="contacto.html"><img src="../img/logo twitter.png" alt="twitter" class="redes">Twitter</a>
-                <a href="contacto.html"><img src="../img/logo correo.png" alt="correo" class="redes">Correo</a>
+                <a class="redes3">
+                  <img src="../img/logo facebook.png" alt="facebook" class="redes">
+                  Facebook</a>
+                <a class="redes3">
+                  <img src="../img/logo instagram.jpeg" alt="instagram" class="redes">
+                  Instagram</a>
+                <a class="redes3">
+                  <img src="../img/logo twitter.png" alt="twitter" class="redes">
+                  Twitter</a>
+                <a class="redes3">
+                  <img src="../img/logo correo.png" alt="correo" class="redes">
+                  Correo</a>
                 </div>
             </div>
         </div>
