--- a/pages.html/nosotros.html
+++ b/pages.html/nosotros.html
@@ -17,13 +17,13 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-12 col-sm-10 col-lg-1">
-          <a href="../index.html"><img src="../img/logo papas.png" alt="imagen logo"></a>
+          <a id="logo" href="../index.html"><img src="../img/logo papas.png" alt="imagen logo"></a>
         </div>
         <div class="col-12 col-sm-10 col-lg-2 ">
-          <p id="logo">Papas Para Todos</p>
+          <p class="tituloLogo">Papas Para Todos</p>
         </div>
           <nav class="col-12 col-sm-10 col-lg-9">
-            <ul class="col-12 paginas">
+            <ul class="desktop col-12 paginas">
                 <li><a href="../index.html">inicio</a></li>
                 <li><a href="nosotros.html">nosotros</a></li>
                 <li><a href="productos.html">productos</a></li>
@@ -31,6 +31,34 @@
                 <li><a href="contacto.html">contacto</a></li>
             </ul>
           </nav>
+          <div class="respon">
+            <nav class=" responsive navbar navbar-expand-lg bg-body-tertiary">
+              <div class="container-fluid">
+                <a class="navbar-brand" href="#"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="nosotros.html">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="productos.html">Productos</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="tienda.html">Tienda</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
+                    </li>
+                </div>
+              </div>
+            </nav>
+          </div>
       </div>        
     </div>        
   </header>
@@ -38,7 +66,7 @@
         <div class="container-fluid">
                 <section class="row historia1">
                   <div class="historia">
-                    <h2 class=" col-12">Nuestra historia</h2>
+                    <h1 class=" col-12">Nuestra historia</h1>
                   </div>                   
                     <article class="col-12 col-lg-6" >
                        <p class="historia"> Papas para todos somos una empresa con mas de 25 años en el rubro.
@@ -62,6 +90,11 @@
             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
             encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
+        <div class="container-fluid">
+          <div class="col-12">
+            <a class="subir" href="#logo">ir arriba</a>
+          </div>
+        </div>   
     </main>
     <footer>
       <div  class="container-fluid">
