--- a/pages.html/tienda.html
+++ b/pages.html/tienda.html
@@ -17,13 +17,13 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-12 col-sm-10 col-lg-1">
-            <a href="../index.html"><img src="../img/logo papas.png" alt="imagen logo"></a>
+            <a id="logo" href="../index.html"><img src="../img/logo papas.png" alt="imagen logo"></a>
           </div>
           <div class="col-12 col-sm-10 col-lg-2 ">
-            <p id="logo">Papas Para Todos</p>
+            <p class="tituloLogo">Papas Para Todos</p>
           </div>
             <nav class="col-12 col-sm-10 col-lg-9">
-              <ul class="col-12 paginas">
+              <ul class="desktop col-12 paginas">
                   <li><a href="../index.html">inicio</a></li>
                   <li><a href="nosotros.html">nosotros</a></li>
                   <li><a href="productos.html">productos</a></li>
@@ -31,6 +31,34 @@
                   <li><a href="contacto.html">contacto</a></li>
               </ul>
             </nav>
+            <div class="respon">
+               <nav class=" responsive navbar navbar-expand-lg bg-body-tertiary">
+                 <div class="container-fluid">
+                   <a class="navbar-brand" href="#"></a>
+                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                     <span class="navbar-toggler-icon"></span>
+                   </button>
+                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                       <li class="nav-item">
+                         <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                       </li>
+                       <li class="nav-item">
+                         <a class="nav-link active" aria-current="page" href="nosotros.html">Nosotros</a>
+                       </li>
+                       <li class="nav-item">
+                         <a class="nav-link active" aria-current="page" href="productos.html">Productos</a>
+                       </li>
+                       <li class="nav-item">
+                         <a class="nav-link active" aria-current="page" href="tienda.html">Tienda</a>
+                       </li>
+                       <li class="nav-item">
+                         <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
+                       </li>
+                   </div>
+                 </div>
+               </nav>
+             </div>
         </div>        
       </div>        
     </header>
@@ -38,10 +66,9 @@
       <div class="container">
          <div class="row">
             <div class="online">
-               <h2 class="col-12">Tienda online</h2>
-            </div>
-           
-            <h3 class="col-12">Comprar aqui</h3>
+               <h1 class="col-12">Tienda online</h1>
+            </div>          
+            <h2 class=" comprar col-12">Comprar aqui</h2>
             <div class="fotoTienda col-12 col-sm-6 col-lg-3" > 
                <div class="imgT"> 
                   <img src="../img/Papines.jpg" alt="papines">
@@ -151,7 +178,12 @@
               </div>
            </div> 
          </div>
-       </div>      
+       </div>
+       <div class="container-fluid">
+         <div class="col-12">
+           <a class="subir" href="#logo">ir arriba</a>
+         </div>
+       </div>         
      </main>
      <footer>
       <div  class="container-fluid">
