--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <header>
       <div class="container-fluid">
         <div class="row">
-          <div class="col-12 col-sm-10 col-lg-1">
-            <a href="./index.html"><img src="./img/logo papas.png" alt="imagen logo"></a>
+          <div class="col-3 col-sm-10 col-lg-1">
+            <a id="logo" href="./index.html"><img src="./img/logo papas.png" alt="imagen logo"></a>
           </div>
-          <div class="col-12 col-sm-10 col-lg-2 ">
-            <p id="logo">Papas Para Todos</p>
+          <div class="col-3 col-sm-10 col-lg-2 ">
+            <p class="tituloLogo">Papas Para Todos</p>
           </div>
-            <nav class="col-12 col-sm-10 col-lg-9">
-              <ul class="col-12 paginas">
+            <nav class="col-3 col-sm-10 col-lg-9">
+              <ul class=" desktop col-12 paginas">
                   <li><a href="index.html">inicio</a></li>
                   <li><a href="pages.html/nosotros.html">nosotros</a></li>
                   <li><a href="pages.html/productos.html">productos</a></li>
@@ -31,6 +31,34 @@
                   <li><a href="pages.html/contacto.html">contacto</a></li>
               </ul>
             </nav>
+            <div class="respon">
+              <nav class=" responsive navbar navbar-expand-lg bg-body-tertiary">
+                <div class="container-fluid">
+                  <a class="navbar-brand" href="#"></a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="pages.html/nosotros.html">Nosotros</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="pages.html/productos.html">Productos</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="pages.html/tienda.html">Tienda</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="pages.html/contacto.html">Contacto</a>
+                      </li>
+                  </div>
+                </div>
+              </nav>
+            </div>          
         </div>        
       </div>        
     </header>
