--- a/pages.html/contacto.html
+++ b/pages.html/contacto.html
@@ -17,13 +17,13 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-12 col-sm-10 col-lg-1">
-          <a href="../index.html"><img src="../img/logo papas.png" alt="imagen logo"></a>
+          <a id="logo" href="../index.html"><img src="../img/logo papas.png" alt="imagen logo"></a>
         </div>
         <div class="col-12 col-sm-10 col-lg-2 ">
-          <p id="logo">Papas Para Todos</p>
+          <p class="tituloLogo">Papas Para Todos</p>
         </div>
           <nav class="col-12 col-sm-10 col-lg-9">
-            <ul class="col-12 paginas">
+            <ul class="desktop col-12 paginas">
                 <li><a href="../index.html">inicio</a></li>
                 <li><a href="nosotros.html">nosotros</a></li>
                 <li><a href="productos.html">productos</a></li>
@@ -31,13 +31,41 @@
                 <li><a href="contacto.html">contacto</a></li>
             </ul>
           </nav>
+          <div class="respon2">
+             <nav class=" responsive navbar navbar-expand-lg bg-body-tertiary">
+               <div class="container-fluid">
+                 <a class="navbar-brand" href="#"></a>
+                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                   <span class="navbar-toggler-icon"></span>
+                 </button>
+                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                     <li class="nav-item">
+                       <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                     </li>
+                     <li class="nav-item">
+                       <a class="nav-link active" aria-current="page" href="nosotros.html">Nosotros</a>
+                     </li>
+                     <li class="nav-item">
+                       <a class="nav-link active" aria-current="page" href="productos.html">Productos</a>
+                     </li>
+                     <li class="nav-item">
+                       <a class="nav-link active" aria-current="page" href="tienda.html">Tienda</a>
+                     </li>
+                     <li class="nav-item">
+                       <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
+                     </li>
+                 </div>
+               </div>
+             </nav>
+           </div>
       </div>        
     </div>        
   </header>
     <main>
         <div class="container-fluid">
             <div class="row">
-                <h2 class="col-12 formu">Completa nuestro formulario</h2>
+                <h1 class="col-12 formu">Completa nuestro formulario</h1>
                 <div class="col-11">
                     <form action="" class="formulario">
                         <div class="col-6">
@@ -83,7 +111,12 @@
                 <iframe class="mapa col-12" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8238.796441991522!2d-58.64952620213689!3d-34.96742198223868!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcdf4d633755b7%3A0x642577d8e20df0ef!2sVicente%20Casares!5e0!3m2!1ses!2sar!4v1685190165285!5m2!1ses!2sar" 
                 width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
          </div>
-        </div>          
+        </div>  
+        <div class="container-fluid">
+          <div class="col-12">
+            <a class="subir" href="#logo">ir arriba</a>
+          </div>
+        </div>        
     </main>
     <footer>
       <div  class="container-fluid">
