--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/estilos.css">    
     <title>Papas para todos</title>
+    <meta name="description" content="conoce todo sobre Papas para todos">
+    <meta name="keywords" content="papas papines papas consumo papas noissette mini papas">
  </head>
  <body>
     <header>
@@ -34,7 +36,7 @@
             <div class="respon">
               <nav class=" responsive navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="#"></a>
+                  <a class="titulo22">Papas para todos</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
