--- a/pages.html/nosotros.html
+++ b/pages.html/nosotros.html
@@ -11,6 +11,8 @@
      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Nosotros</title>
+    <meta name="description" content="Conoce mas acerca de Papas para todos">
+    <meta name="keywords" content="papas papines papas consumo papas noissette mini papas">
 </head>
 <body>
   <header>
