--- a/pages.html/tienda.html
+++ b/pages.html/tienda.html
@@ -11,6 +11,8 @@
      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Tienda</title>
+    <meta name="description" content="Tienda para comprar nuestros productos">
+    <meta name="keywords" content="papas papines papas consumo papas noissette mini papas">
 </head>
 <body>
    <header>
