--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./css/estilos.css">    
+    <link rel="stylesheet" href="./css/estilos.css">   
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> 
     <title>Papas para todos</title>
     <meta name="description" content="conoce todo sobre Papas para todos">
     <meta name="keywords" content="papas papines papas consumo papas noissette mini papas">
@@ -68,10 +69,10 @@
       <section class="container-fluid">
         <div class="row">
           <div class="col-12">
-            <h1>Bienvenidos a Papas Para Todos</h1>
+            <h1 class="animate__animated animate__fadeInDown">Bienvenidos a Papas Para Todos</h1>
           </div>
           <article class="col-12">
-            <p class="parrafo">Papas para todos somos una empresa con mas de 25 años en el rubro.
+            <p class="parrafo animate__animated animate__fadeInUp">Papas para todos somos una empresa con mas de 25 años en el rubro.
                   Producimos y comercializamos papas consumo, mini papas, papines y papas noissette
                   con alcance a toda la Argentina con la mision de llegar con un producto de altisima calidad 
                   a todos los hogares. <br>
@@ -141,7 +142,7 @@
             <a class="subir" href="#logo">ir arriba</a>
           </div>         
         </div>                  
-    <footer id="bajar">
+    <footer class="f" id="bajar">
       <div  class="container-fluid">
         <div class="row">
           <b class="col-12 col-sm-10 col-lg-3 referencia">San Martin 0000</b>
