--- a/pages.html/nosotros.html
+++ b/pages.html/nosotros.html
@@ -10,6 +10,7 @@
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" /> 
     <title>Nosotros</title>
     <meta name="description" content="Conoce mas acerca de Papas para todos">
     <meta name="keywords" content="papas papines papas consumo papas noissette mini papas">
@@ -36,7 +37,7 @@
           <div class="respon">
             <nav class=" responsive navbar navbar-expand-lg bg-body-tertiary">
               <div class="container-fluid">
-                <a class="navbar-brand" href="#"></a>
+                <a class="titulo22">Papas para todos</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -68,7 +69,7 @@
         <div class="container-fluid">
                 <section class="row historia1">
                   <div class="historia">
-                    <h1 class=" col-12">Nuestra historia</h1>
+                    <h1 class=" col-12 animate__animated animate__fadeInDown">Nuestra historia</h1>
                   </div>                   
                     <article class="col-12 col-lg-6" >
                        <p class="historia"> Papas para todos somos una empresa con mas de 25 años en el rubro.
@@ -98,7 +99,7 @@
           </div>
         </div>   
     </main>
-    <footer>
+    <footer class="f">
       <div  class="container-fluid">
          <div class="row">
            <b class="col-12 col-sm-10 col-lg-3 referencia">San Martin 0000</b>
