--- a/pages.html/productos.html
+++ b/pages.html/productos.html
@@ -10,6 +10,7 @@
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" /> 
     <title>Inicio</title>
     <meta name="description" content="Productos destacados de Papas para todos">
     <meta name="keywords" content="papas papines papas consumo papas noissette mini papas">
@@ -36,7 +37,7 @@
               <div class="respon">
                 <nav class=" responsive navbar navbar-expand-lg bg-body-tertiary">
                   <div class="container-fluid">
-                    <a class="navbar-brand" href="#"></a>
+                    <a class="titulo22">Papas para todos</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
@@ -66,7 +67,7 @@
       </header>
     <main>
         <div class="container">
-            <h1 class="col-12">Nuestros productos</h1>
+            <h1 class="col-12 animate__animated animate__fadeInDown">Nuestros productos</h1>
                 <div class="row">
                     <div class="col-12 col-lg-3 imgT">
                          <img src="../img/papines 2.jpg" alt="papines" class="imgProducto">
@@ -117,7 +118,7 @@
                 </div>
               </div>   
      </main>
-     <footer>
+     <footer class="f">
         <div  class="container-fluid">
            <div class="row">
              <b class="col-12 col-sm-10 col-lg-3 referencia">San Martin 0000</b>
